--- a/payrollsystemsti/AdminTabs/leaveManagement.resx
+++ b/payrollsystemsti/AdminTabs/leaveManagement.resx
@@ -123,7 +123,7 @@
   <metadata name="dgLeaveType.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="dgLeaveName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="dgName.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="dgStatus.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -133,7 +133,7 @@
   <data name="btnReload.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAAAtZJREFUSEvFlctLVGEYxqcohRYRXUiLwTZtiwLDogm6UBC4qOi/cFMhYhBUaJdF
+        EAAACxABrSO9dQAAAtZJREFUSEvFlctLVGEYxqcohRYRXUiLwTZtiwLDogm6UBC4qOi/cFMhYhBUaJdF
         IVYYXTZtAmlRdE/pZglRYEFQFhhiGFnNzDkzZ2bAYPo9Z94zOjnkmRB84OH7vvf2nO96IrOOfD4/J5vN
         bstkMp3wDYx7npeDX+AL2J5Op9dZeOUgeRdF38G3sIWCGxzHWYJwNcKrsMWwHYefYD/x6y21CGLnW7cU
         OKoo0EXiEIm7YS39A7BHNnwJ2kH4EDZJGNt+OMK4TbNXHT5kK7Zmv+hkmMB9gh8lk8nFSmI8Bi9KkLYu
