--- a/payrollsystemsti/AdminTabs/formDashboard.resx
+++ b/payrollsystemsti/AdminTabs/formDashboard.resx
@@ -234,17 +234,6 @@
         bROYI4eG7MwgsK/wEXU6HWc+n0d/FRA2RVtQeZxncl/RFLaE0rBYhAAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="btnArchive.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUlJREFUSEvN
-        VUtqhUAQnKvkEtnmAFnnBoGs3iWyDblBdtnmIlm48bdQVLIRNQafEgPiL11h5iEyw0TxySsoWke7yp5m
-        WrYLxnFklmVdm6Z5uwWhBc0TaPGGFjYFNLk8Y47j3PH1v2o24AhNLn8BBkmSmMMwjDp6nvfEc9QG2Ls4
-        jt8FgyB4Kcvys+/7Ybo+J5KjKHqDBq6VBvQVjxATrKrqCIOmaVo8VxEV/MtARhhQ1GK1AbYNleloGMYV
-        z1lmsILLDIqiiClqEYbhKwXkqA1c1z1QQ0/I8zzatMm2bd/Xdf0tmKapBYO2bTvMGRWRvLrJVMUHRS1w
-        Zigg58KajOcoH6TrB9k7My4zmB60H4Lv+8+ycUG9wNhHznIDjI2u63oY0P3XdMgJ0mHTDzsZ8XViNmVZ
-        5snemXHnJvO92xTQ5PI7/PTPB8Z+AVYBNM54KfQoAAAAAElFTkSuQmCC
-</value>
-  </data>
   <data name="btnLeave.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUlJREFUSEvN
@@ -307,6 +296,86 @@
         z1lmsILLDIqiiClqEYbhKwXkqA1c1z1QQ0/I8zzatMm2bd/Xdf0tmKapBYO2bTvMGRWRvLrJVMUHRS1w
         Zigg58KajOcoH6TrB9k7My4zmB60H4Lv+8+ycUG9wNhHznIDjI2u63oY0P3XdMgJ0mHTDzsZ8XViNmVZ
         5snemXHnJvO92xTQ5PI7/PTPB8Z+AVYBNM54KfQoAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnArchive.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAUlJREFUSEvN
+        VUtqhUAQnKvkEtnmAFnnBoGs3iWyDblBdtnmIlm48bdQVLIRNQafEgPiL11h5iEyw0TxySsoWke7yp5m
+        WrYLxnFklmVdm6Z5uwWhBc0TaPGGFjYFNLk8Y47j3PH1v2o24AhNLn8BBkmSmMMwjDp6nvfEc9QG2Ls4
+        jt8FgyB4Kcvys+/7Ybo+J5KjKHqDBq6VBvQVjxATrKrqCIOmaVo8VxEV/MtARhhQ1GK1AbYNleloGMYV
+        z1lmsILLDIqiiClqEYbhKwXkqA1c1z1QQ0/I8zzatMm2bd/Xdf0tmKapBYO2bTvMGRWRvLrJVMUHRS1w
+        Zigg58KajOcoH6TrB9k7My4zmB60H4Lv+8+ycUG9wNhHznIDjI2u63oY0P3XdMgJ0mHTDzsZ8XViNmVZ
+        5snemXHnJvO92xTQ5PI7/PTPB8Z+AVYBNM54KfQoAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btn_back.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAOeklEQVR4Xu3dW6ilZR0GcE/hiUojg9Kigg5QlEgni+imKOiiiCxBhHGvtbbThYEQFGS0L+ouCsKL
+        6CICCWKKRNf61mhSo5VXpVlIiSaWIHTy1J71rW3qfH175tXZrVnv62kOe//f3w+eu2HP+r6b53nfvffM
+        SQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHACdN3Ju8ft+Svj/e8eTtsPDKbt
+        h1bHs4tWx/M3rO3rTkt/CgDYyVbH/3n1aDq/bNTMvzdq2ruGTdv26TJ5os89fa4bTWej3Xvnb0xfBgDY
+        7i7Z053an+4/25f+pC/z/6ZyfzE50Of2QTO7cnXcnXXoqwMA28pm8fdlPRxO2vsWivxo5J/9oLjm8pu7
+        s9NfBwCcaKNJ+8G+pO9cKO1jkQcHk/aS9NcCACfCwev+ZrbWF/NTC0V9TDNo2p/uuv7Rc9LHAACOl8FN
+        j7+qL+PbFsv5uGXS3reyd+Nt6eMAAMfa6k2z1/Yl/IcjSvn45+HNbz+kjwUAHCubv543aNoHlpTxicmk
+        XR/tnb03fTwA4Gjb/Ad7+tK9/4gSPvH51+r4ibenjwkAHC3buPwPZtC0967c0L08fVwA4KXa7uV/OLMf
+        pI8MALwUO6f8D2UwmX0yfXQA4MXYaeWf8perpt3p6REAgBdi2/20/wvLF9NjAADP1w49+W/Ng6u/616W
+        HgcAeC47/OR/ONP28+mRAICSACf/rbkxPRYAkBPm5H84T3xh8ti56fEAgEXBTv5bMvtUekQAYKu45d92
+        o6b9dnpMAOAZkcs/5db0qADApgrKf/M3AR5KjwsABPyBv1wO7NrXnZEeGwDqVcXJf0uumK6flx4dAOpU
+        0cn/2axMNt6cHh8A6lPbyf/ZTNsL0isAgLpUW/59dl3/6DnpNQBAPWq89t+SjUv2dKemVwEAdaj55H8o
+        sz+lVwEAdaj85H8o0/Zn6XUAQHxO/ocymLRfSq8EAGJz8j+c0d7Ze9NrAYC4nPy3ZNo+5AcAAQhP+S9k
+        0n4rvRoAiMm1/xE5MJisvzO9HgCIx8l/acbp9QBAPE7+S3NgZdxenF4RAMTi5J/NdekVAUAsTv7ZPLJy
+        w+x16TUBQBxO/vmMJu2l6TUBQBxO/oVM2++m1wQAcTj5F3Pj2r7utPSqACAGJ/9ibr16T3dmelUAEIOT
+        fz6DSfvrlRu6l6dXBQAxKP98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98
+        lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAh
+        Kf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yU
+        PwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp
+        /3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/
+        ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/
+        fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8A
+        ISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98
+        lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAh
+        Kf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACEp/3yUPwAhKf98lD8AISn/fJQ/ACHtHrfn
+        D5r2gWXlJ+1tl9/cnZ1eFQDEsHrLI68cNe1dS4qv+jj5AxDS2lp3Sl90v1gsPjkYJ38AYhpO519bUnzV
+        x8kfgLBWx7OL+rJ7crH8xMkfgKi67uS+6H61UHzVx8kfgNBGk/bSZQVYeZz8AYitL7s7F8qv6jj5AxDe
+        sNn42LISrDhO/gDE1xfejxYKsNo4+QNQhc2T7nDSri8rwwrj5A9AHQbN/k8sKcLq4uQPQFWGk9k3lxVi
+        TVH+AFRn2MxuWVaKFcW1PwD16QvwwYVCrCZO/gBU6appd3pfhE8vFmMlcfIHoE67b15/zZJiDB8nfwCq
+        tjLZePOygowc5Q9A9YY3zt+0rCSD5zcGAABVq/VbAH2MAADq5YcA/RAgAJXqi/BvC8VYU9wEAFCnYTP7
+        +ZJirCluAgCoz3A6+8aSUqwtbgIAqMtosv/jSwqxxhgBANRjddyd5b8Dfja+HQBAPfriu26hCGuOmwAA
+        6jCabHx0SRHWHDcBANRhOG3vWFKENcdNAADxjZr2c0tKsPa4CQAguK47ebPwFgpQ3AQAEN2o2X9hX3hP
+        LhSguAkAILrhZP7VJQUobgIAiGxtrTtl2MxuWVKA4iYAgMgum3av6Mvu9wvlJ4fiJgCAuHaP2/MHTfvA
+        kgIUNwEARLY6nr+hL7v7F8pPDsVNAABxGQHFGAEAxGUEFGMEABCXEVCMEQBAXEZAMUYAAHEZAcUYAQDE
+        ZQQUYwQAEJcRUIwRAEBcRkAxRgAAcRkBxRgBAMRlBBRjBAAQlxFQjBEAQFxGQDFGAABxGQHFGAEAxGUE
+        FGMEABCXEVCMEQBAXEZAMUYAAHEZAcUYAQDEZQQUYwQAEJcRUIwRAEBcRkAxRgAAcRkBxRgBAMRlBBRj
+        BAAQlxFQjBEAQFxGQDFGAABxGQHFGAEAxGUEFGMEABCXEVCMEQBAXEZAMUYAAHEZAcUYAQDEZQQUYwQA
+        EJcRUIwRAEBcRkAxRgAAcRkBxRgBAMRlBBRjBAAQlxFQjBEAQFxGQDFGAABxGQHFGAEAxGUEFGMEABCX
+        EVCMEQBAXEZAMUYAAHEZAcUYAQDEZQQUYwQAEJcRUIwRAEBcRkAxRgAAcRkBxRgBAMRlBBRjBAAQlxFQ
+        jBEAQFxGQDFGAABxGQHFGAEAxGUEFGMEABCXEVCMEQBAXEZAMUYAAHEZAcUYAQDEZQQUYwQAEJcRUIwR
+        AEBcRkAxRgAAcRkBxRgBAMRlBBRjBAAQlxFQjBEAQFxGQDFGAABxGQHFGAEAxGUEFGMEABCXEVCMEQBA
+        XEZAMUYAAHEZAcUYAQDEZQQUYwQAEJcRUIwRAEBcRkAxRgAAcRkBxRgBAMRlBBRjBAAQlxFQjBEAQFxG
+        QDFGAABxGQHFGAEAxGUEFGMEABCXEVCMEQBAXEZAMUYAAHEZAcUYAQDEZQQUYwQAEJcRUIwRAEBcRkAx
+        RgAAcRkBxRgBAMRlBBRjBAAQlxFQjBEAQFy7987fOGjaB5YUoDTtrVfv6c5MrwoAYnETUMx4bV93WnpV
+        ABCLm4BCJu130msCgHjcBGRzYNjMPpVeEwDE4yYgk2n77yum6+el1wQA8bgJWJ7BZP799IoAICY3AUvz
+        9KjZf2F6RQAQk5uApflxej0AEJebgCPy1PDG+ZvS6wGAuNwELGb+9fRqACA2I+D/ck96LQAQn28HHM6o
+        2Xhrei0AEJ+bgEMZNLNheiUAUAc3AZuZ/SC9DgCoh5uA9vb0KgCgLpXfBPwjvQYAqE/FNwFPndR1J6fX
+        AAD1qXUErI67s9IrAIA61fjtgNVbHnllenwAqFdlNwEHLtnTnZoeHQDqVs1NwKRdT48MAGyq4yZg/sf0
+        uADAM8LfBEzbn6VHBQC2inwTMGrm16THBAAWhR0Bk/mH0yMCAMtE+3bAqJk9ftW0Oz09HgCQE+omYDr7
+        YXosAOC5RLkJGE32fzw9EgDwfAS4Cfjz2lp3SnocAOD52sk3AaNmvis9BgDwQu3Im4DJ/O61fd1p6REA
+        gBdjp90EjKbzj6SPDgC8FDvoJuDa9JEBgKNh24+Ayfzuq/d0Z6aPCwAcLdt4BPzzyvHGW9LHBACOtm33
+        MwGTdn2lmb0nfTwA4FhZvWn22lHT3rW0kI9vHh5N2g+mjwUAHGtfmDx2bj8CfrmklI9LBk1776jZeGv6
+        OADA8bL5r+31J/Av94X81GJBH9NM2p/suv7Rc9LHAABOhNWmfX9fzL89oqiPfv7al/9n0l8LAJxoB28D
+        mvmuvqTvWSjto5G/D5v5V/yaHwBsU5tDYDCdfXowbW/oi/uJhSJ/IXm6z22DZjbcta87I315AGC7Sz8o
+        +Lm+yK8dTts7Nn9lb0vBL2Zj8x/z2fx//PvT/hX9n78gfRkAYKc7+CuEN62/YzBu37cybi8e7t3/ritu
+        bl/vv+8FAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC2q5NO+h9U5/MYwGrJagAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
